# transx2gtfs

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
tests/: test_calendar.py  test_service_journey_pattern.py  test_stops.py  test_testing.py  test_transx2gtfs.py  test_xml_reading.py
transx2gtfs/: __init__.py  agency.py  bank_holidays.py  calendar.py  calendar_dates.py  cli.py  converter.py  dataio.py  distribute.py  routes.py  stop_times.py  stops.py  transxchange.py  trips.py  xml.py
transx2gtfs/data/: __init__.py  bank-holidays.json
transx2gtfs/util/: network.py  xml.py
txc2gtfs/: __init__.py  agency.py  bank_holidays.py  calendar.py  calendar_dates.py  cli.py  converter.py  dataio.py  gtfs.py  routes.py  stop_times.py  stops.py  transxchange.py  trips.py
txc2gtfs/data/: __init__.py
txc2gtfs/util/: network.py  table.py  xml.py
